--- a/css/style.css
+++ b/css/style.css
@@ -799,8 +799,8 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--first-color);
-  
+  border: 2px solid var(--first-color);
+  border-radius: 10px 10px 0 0;
 }
 
 .title{
@@ -815,6 +815,7 @@ font-weight: bold;
   background: none;
   font-size: 1.25rem;
   font-weight: bold;
+  color: var(--title-color);
 }
 
 
@@ -829,6 +830,7 @@ font-weight: bold;
 
 .button__group i{
   font-size: 1.25rem;
+  color: var(--title-color);
 }
 
 button{
@@ -893,4 +895,83 @@ button{
 #overlay.active{
   opacity: 1;
   pointer-events: all;
+}
+
+
+/* gallery for images in popup */
+.info__modal{
+  overflow-y: scroll;
+  height: 80vh;
+  background: var(--body-color);
+  color: var(--title-color);
+  
+}
+
+
+.gallery{
+  width: 100%;
+  display: flex;
+  overflow-y: scroll;
+  
+}
+
+.gallery .image-list{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 10px;
+  flex: none;
+  align-items: center;
+}
+
+.gallery .image-list img{
+  
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  filter: grayscale(100%);
+  transition: transform .5s;
+}
+
+.gallery::-webkit-scrollbar{
+  display: none;
+}
+
+.gallery-wrap{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10% auto;
+  width: 90%;
+ 
+  overflow: hidden;
+}
+
+#backBtn, #nextBtn{
+  position: absolute;
+  top: 50%; 
+  transform: translateY(-50%); 
+  z-index: 10; 
+  width: 30px;
+  height: 30px; 
+  cursor: pointer;
+  font-size: 10px;
+  border-radius: 100px;
+  background: var(--first-color); 
+}
+
+#backBtn {
+  left: 10px; 
+}
+
+#nextBtn {
+  right: 10px;
+}
+
+.gallery .image-list img:hover{
+  filter: grayscale(0);
+  cursor: pointer;
+  transform: scale(1.1);
 }
